--- a/owb_spies/localisation/spy_events_l_english.yml
+++ b/owb_spies/localisation/spy_events_l_english.yml
@@ -6,13 +6,85 @@
     spy_events.2.t:0 "Big Mountain Expedition"
     spy_events.2.d:0 "In the years before the Great War, Big Mountain had been the home to the brightest minds of the 21st century. Scientists of vision were drawn to the facility to tackle the greatest technological challenges of the era. They sought to create a new world, fueled by technology, for the benefit of all mankind. Sonic emitters, space age alloys, DNA hybridization, force field particle research, Auto-Doc advances in cranial, cardiac, and trauma surgery... the hopes and dreams of a century became realities in the electronic forges of Big Mountain. The nucleus of this research was the Dome, a huge stone facility that held the labs of every science known to man. It was a think tank where no problem could not be solved, where no question could not be answered. The Great War brought a new energy to Big Mountain and its scientists. Equations and calculations marched endlessly across chalkboards and computer terminals toward one solution: Winning the war. On the night of October 23rd, 2077, the scientists received an answer that put all their questions to rest. In the aftermath, Big Mountain's silent experiments went to sleep, their creators slowly dying in the new world that had been left behind. And the great stone in the middle of the Big Empty lay untouched, filled with countless technological wonders..."
     spy_events.2.a:0 "Wonders that, in the end, had been answers to the wrong question."
+    spy_events.3.t:0 " The Think Tank"
+    spy_events.3.d:0 "Inside the immense dome shaped building you find a group of six scientists being busy with their day to day experiments. What is strange about these scientists is that they lack a body, they are floating brains."
+    spy_events.3.a:0 "Listen to what the Think Tank has to say"
+    spy_events.3.b:0 "Ignore the scientists"
+    spy_events.4.t:0 "X-2 Research Facility"
+    spy_events.4.d:0 "A large pre-war communication facility raises before you. It seems like the big antena was used for possibly satellite communication."
+    spy_events.4.a:0 "Explore the facility"
+    spy_events.4.b:0 "We will find something more interesting"
+    spy_events.5.t:0 "Higgs Village"
+    spy_events.5.d:0 "A pre-war hangar in which resides what would have been a pre-war suburban district. The peace and quiet which are found here are quite tranquil, some may say. Who knows what old world secrets it might hide."
+    spy_events.5.a:0 "Discover the past of the scientists"
+    spy_events.5.b:0 "Loot everything you find valuable in the houses"
+    spy_events.6.t:0 "Y-17 Medical Facility"
+    spy_events.6.d:0 "An old pre-war facility, nowadays a ruin almost of its former self, used to be some sort of medical facility. Considering all technologies we have stumbled in at Big Mountain it is not unlikely that this was the birthplace of the revolutionary Auto-Doc."
+    spy_events.6.a:0 "Explore Y-17"
+    spy_events.6.b:0 "Why bother, essential oils do the trick as well"
+    spy_events.7.t:0 "X8 & X13"
+    spy_events.7.d:0 "Two impressive facilities, each on opposite sides of Big Mountain. Both contain important experiments to some of the scientists of Big Mountain. Whoever, are we willing to risk the lives of our men to be lab rats for some 200 year old brains in jars? Completing the experiments will maybe result in having some sway over the scientists."
+    spy_events.7.a:0 "X8 Only"
+    spy_events.7.b:0 "X13 Only"
+    spy_events.7.c:0 "Both X8 and X13"
+    spy_events.7.e:0 "The brains can run the test themselves if they want to!"
+    spy_events.8.t:0 "X-7 Artillery Firing & Boom Town"
+    spy_events.8.d:0 "X-7 a facility which in reality is two facilities. One is a test site which used to resemble a town, from which the name comes from. The other part of the facility is a command section with artillery cannons. The artillery seems to have been used for a new type of shell which has had devastating effect."
+    spy_events.8.a:0 "Explore X7"
+    spy_events.8.b:0 "We don't need fancy explosives, good ol' dynamite will do us just fine!"
+    spy_events.9.t:0 "X-43"
+    spy_events.9.d:0 "X-43 or as it is now known under the management of Dr. Mobius, The Forbbiden Dome, for it is forbbiden to the minds of the Think Tank. Pre-war X-43 used as a robotics warfare development facility. All of the roboscorpions we have encountered and battled upon reaching this point have been invesioned and created here. After exploring the facility we engage in conversation with Dr. Mobius which explains that what is doing is to keep the wasteland safe from Big Mountain's experiments."
+    spy_events.9.a:0 "Leave Mobius to continue his job of keeping the Think Tank locked down."
+    spy_events.9.b:0 "Work with Mobius to convince the Think Tank to stay in their Dome"
+    spy_events.9.c:0 "Kill Mobius"
+    spy_events.10.t:0 "Old World Blues"
+    spy_events.10.d:0 "There is an expression in the Wasteland: 'Old World Blues'. It refers to those so obsessed with the past they can't see the present, much less the future, for what it is.
+    
+    After your adventure in Big Mountain you are forced to decide the fate of the Think Tank. Do you simply let the scientists here continue their crazy experiments, do you harvest the scientists for your own use or do you end their suffering as they are dehumanized shadows of their former selves in jars."
+    spy_events.10.a:0 "The Think Tank remains trapped and can accessed by others, Mobius continues to do his job."
+    spy_events.10.b:0 "Mobius is dead, Think Tank closes its door to the outside, however they are willing to work for you"
+    spy_events.10.c:0 "Kill the Brains in Jars, loot the place."
     spy_events.11.t:0 "Sierra Madre"
     spy_events.11.d:0 "Left my heart in the Sierra Madre. Gone to Sierra Madre. I wish I was at the Sierra Madre. Messages like these can be found scribbled across the Mojave, left by fools young and old alike chasing a fleeting dream. If you don't find a poster, you find a postcard. If it's not a postcard then it's the broadcast — anything can pull you in, but once you hear that voice you're hooked. It was no secret that many a prospector had died exploring the Sierra Madre for salvage, and those who survived spun tales of a city akin to El Dorado. Rumours of mysterious technology unseen anywhere else drove this search party forward. \"There's treasures there, sleeping, some, awake.\""
     spy_events.11.a:0 "Time to Begin Again"
+    spy_events.12.t:0 "Meeting Dean Domino"
+    spy_events.12.d:0 "Upon discovering the Sierra Madre villa, a couple of strange symbols marking stashes and christmas lights catch our eye. Following the christmas lights we find a ghoul who calls himself 'Dean Domino'. He offers his services to aid us in our quest for the Sierra Madre's riches, if we give him a cut of the tresure and a fee for his services."
+    spy_events.12.a:0 "Recruit Dean"
+    spy_events.12.b:0 "A Ghoul? No thanks!"
+    spy_events.12.c:0 "Bribe the Ghoul for information"
+    spy_events.13.t:0 "Activate the Gala Event"
+    spy_events.13.d:0 "The only way to open the gates of the Sierra Madre Casino is to trigger the Gala event. We have found some schematics how to trigger the Gala event. First, we must flip the switches in the Switching Substation in Salida del Sol. Secondly, we must fix some wires on one of the rooftops in Puesta del Sol south. Lastly, activate the manual override in Puesta del Sol switching station."
+    spy_events.13.a:0 "Navigate the Villa with the help of Dean"
+    spy_events.13.b:0 "Clear the Villa without information/help"
+    spy_events.13.c:0 "Navigate the Villa with information"
+    spy_events.14.t:0 "The Sierra Madre Casino"
+    spy_events.14.d:0 "'Everyone, please may I have your attention -- guests and residents of the Villa alike. I ask you to step outside and look to the night sky, it's the moment you've been waiting for, the reason we're all here. The Gala Event, the grand opening of the Sierra Madre Casino, you are the ones who have made this momentous occasion possible, and for that we thank you. So raise your glass in celebration, let music fill the streets. Fireworks light the sky and promise of new beginnings fill your hearts. No matter what your fortune, no matter what your cares -- let go this night and begin again. I suggest you hurry, though; the gates of Sierra Madre are open but only for a brief time. After that the doors will close for the evening's festivities and won't open again till morning.' pre-war speakers blast. We enter the casino."
+    spy_events.14.a:0 "Navigate the Casino. Dean picks up a holotape on the way to the Vault"
+    spy_events.14.b:0 "Clear the Casino out room by room"
+    spy_events.14.c:0 "Go straight to the Vault"
+    spy_events.15.t:0 "Sierra Madre Vault"
+    spy_events.15.d:0 "Having made our way up to the suites on the upper floors of the Casino and into Vera Keyes personal bedroom you find an reinforced elevator door. This should be the way to the Vault!"
+    spy_events.15.a:0 "Access the Vault using the holotape"
+    spy_events.15.b:0 "Access the Vault by blowing the elevator door up"
+    spy_events.16.t:0 "The Heist of the Century"
+    spy_events.16.d:0 "You have done it, you have accessed the Sierra Madre's Vault. Inside you found a large amount of Gold Bars which could be used to fund your endevours for years to come..."
+    spy_events.16.a:0 "Dean steals the treasure"
+    spy_events.16.b:0 "Give Dean his cut and let him leave"
+    spy_events.16.c:0 "Give Dean a bigger share and invite him to work for you"
+    spy_events.100.t:0 "Drug Smuggling"
+    spy_events.100.d:0 "There have been reports of drug smuggling in our country. This is a serious problem and must be deal with at once."
+    spy_events.100.a:0 "Stop the drug trade"
+    spy_events.100.b:0 "People deserve to take a shot once in a while to relax, it is fine as long as it doesn't go wild."
+    spy_events.101.t:0 "Slave Smuggling"
+    spy_events.101.d:0 "There have been reports of slave smuggling in our country. This is a serious problem and must be deal with at once."
+    spy_events.101.a:0 "Stop the slave trade"
+    spy_events.101.b:0 "Save the slaves but put them in debt for rescuing them"
+    spy_events.101.c:0 "If they can afford a personal slave they can keep it!"
     #Tooltips
     big_mountain_visited:0 "Visited Big Mountain."
     big_mountain_completed:0 "Big Mountain Completed"
     sierra_madre_visited:0 "Visited the Sierra Madre"
     sierra_madre_looted:0 "Looted the Sierra Madre"
+    disable_big_mt.tt:0 "§gThis option will disable Big Mountain forever.§!"
 
 
