--- a/owb_spies/localisation/spy_events_l_english.yml
+++ b/owb_spies/localisation/spy_events_l_english.yml
@@ -31,21 +31,19 @@
     spy_events.8.t:0 "X-7 Artillery Firing & Boom Town"
     spy_events.8.d:0 "X-7 a facility which in reality is two facilities. One is a test site which used to resemble a town, from which the name comes from. The other part of the facility is a command section with artillery cannons. The artillery seems to have been used for a new type of shell which has had devastating effect."
     spy_events.8.a:0 "Explore X7"
-    spy_events.8.b:0 "We don't need fancy explosives, good ol' dynamite will do us just fine!"
+    spy_events.8.b:0 "Good ol' dynamite will do us just fine!"
     spy_events.9.t:0 "X-43"
     spy_events.9.d:0 "X-43 or as it is now known under the management of Dr. Mobius, The Forbbiden Dome, for it is forbbiden to the minds of the Think Tank. Pre-war X-43 used as a robotics warfare development facility. All of the roboscorpions we have encountered and battled upon reaching this point have been invesioned and created here. After exploring the facility we engage in conversation with Dr. Mobius which explains that what is doing is to keep the wasteland safe from Big Mountain's experiments."
-    spy_events.9.a:0 "Leave Mobius to continue his job of keeping the Think Tank locked down."
+    spy_events.9.a:0 "Leave Mobius alone"
     spy_events.9.b:0 "Work with Mobius to convince the Think Tank to stay in their Dome"
     spy_events.9.c:0 "Kill Mobius"
     spy_events.10.t:0 "Old World Blues"
-    spy_events.10.d:0 "There is an expression in the Wasteland: 'Old World Blues'. It refers to those so obsessed with the past they can't see the present, much less the future, for what it is.
-    
-    After your adventure in Big Mountain you are forced to decide the fate of the Think Tank. Do you simply let the scientists here continue their crazy experiments, do you harvest the scientists for your own use or do you end their suffering as they are dehumanized shadows of their former selves in jars."
-    spy_events.10.a:0 "The Think Tank remains trapped and can accessed by others, Mobius continues to do his job."
-    spy_events.10.b:0 "Mobius is dead, Think Tank closes its door to the outside, however they are willing to work for you"
+    spy_events.10.d:0 "There is an expression in the Wasteland:'Old World Blues'. It refers to those so obsessed with the past they can't see the present, much less the future, for what it is. \n \n After your adventure in Big Mountain you are forced to decide the fate of the Think Tank. Do you simply let the scientists here continue their crazy experiments, do you harvest the scientists for your own use or do you end their suffering as they are dehumanized shadows of their former selves in jars."
+    spy_events.10.a:0 "The Think Tank remains trapped."
+    spy_events.10.b:0 "Mobius is dead,The Think Tank works for you."
     spy_events.10.c:0 "Kill the Brains in Jars, loot the place."
     spy_events.11.t:0 "Sierra Madre"
-    spy_events.11.d:0 "Left my heart in the Sierra Madre. Gone to Sierra Madre. I wish I was at the Sierra Madre. Messages like these can be found scribbled across the Mojave, left by fools young and old alike chasing a fleeting dream. If you don't find a poster, you find a postcard. If it's not a postcard then it's the broadcast — anything can pull you in, but once you hear that voice you're hooked. It was no secret that many a prospector had died exploring the Sierra Madre for salvage, and those who survived spun tales of a city akin to El Dorado. Rumours of mysterious technology unseen anywhere else drove this search party forward. \"There's treasures there, sleeping, some, awake.\""
+    spy_events.11.d:0 "Left my heart in the Sierra Madre. Gone to Sierra Madre. I wish I was at the Sierra Madre. Messages like these can be found scribbled across the Mojave, left by fools young and old alike chasing a fleeting dream. If you don't find a poster, you find a postcard. If it's not a postcard then it's the broadcast — anything can pull you in, but once you hear that voice you're hooked. It was no secret that many a prospector had died exploring the Sierra Madre for salvage, and those who survived spun tales of a city akin to El Dorado. Rumours of mysterious technology unseen anywhere else drove this search party forward. "There's treasures there, sleeping, some, awake."
     spy_events.11.a:0 "Time to Begin Again"
     spy_events.12.t:0 "Meeting Dean Domino"
     spy_events.12.d:0 "Upon discovering the Sierra Madre villa, a couple of strange symbols marking stashes and christmas lights catch our eye. Following the christmas lights we find a ghoul who calls himself 'Dean Domino'. He offers his services to aid us in our quest for the Sierra Madre's riches, if we give him a cut of the tresure and a fee for his services."
@@ -74,7 +72,7 @@
     spy_events.100.t:0 "Drug Smuggling"
     spy_events.100.d:0 "There have been reports of drug smuggling in our country. This is a serious problem and must be deal with at once."
     spy_events.100.a:0 "Stop the drug trade"
-    spy_events.100.b:0 "People deserve to take a shot once in a while to relax, it is fine as long as it doesn't go wild."
+    spy_events.100.b:0 "People deserve to take a shot once in a while"
     spy_events.101.t:0 "Slave Smuggling"
     spy_events.101.d:0 "There have been reports of slave smuggling in our country. This is a serious problem and must be deal with at once."
     spy_events.101.a:0 "Stop the slave trade"
